# paris-events-analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose.yml  justfile  main.py  pyproject.toml  requirements.in
.github/workflows/: mission-1.yml  mission-2.yml  mission-3.yml  mission-4.yml  mission-5.yml
datalake/.minio.sys/: format.json
datalake/.minio.sys/tmp/.trash/0db2b3da-6859-43de-8b68-352498f0aae5/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/143ecf8e-465f-4233-b374-0d96f4002822/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/1689eb3c-649a-4051-9a95-d987a6ab2d37/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/1c69e175-011b-4753-9343-0b5a0850d1f2/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/22b8b643-f368-4e76-aaad-e3df277c9597/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/23fae601-b2e0-4110-9870-77be4f1d0684/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/266d48d7-4545-4811-af3f-54209915b57d/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/3ad3c012-c327-4f96-abd0-365915a9d007/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/3ba00829-8b7c-4edd-b4b6-66395f878d51/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/5a062b5b-d0dd-4860-8f8c-078feaa1cd25/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/5fb6d9dd-03d5-43cf-a897-eb83c0ea4eb3/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/61b49bb9-7a18-4646-967a-12be7a0e11aa/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/656bfbb5-ff57-41c3-8860-993ec2014049/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/6580b48a-5f12-42c9-a828-c5958f66dfee/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/65fb3ee1-4014-451d-a824-c57edee0c05a/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/737d62ca-4159-45f1-af72-e47b3ac328a7/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/8002e77a-392f-4814-8a63-5c582721c0e1/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/8a219930-f8f9-4f06-9539-22faf9dec3f6/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/936bd73c-387d-4c64-951e-b1863910779d/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/943f53d3-8010-4837-9a9b-fe1e4862b574/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/9446724d-5f08-4ace-9265-dd8ab1103033/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/9e7a817c-6792-4a60-95a6-5460366ec4c8/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/9ef37052-a831-4f91-a38b-21850840fe3c/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/9f140529-3db2-43ee-bae8-b31266e3d9d3/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/abc18541-2c4b-43f9-9fbc-a239e5f0785d/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/b0b21a46-68e9-4089-9ebc-54be09bc90d8/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/b2674c0b-87c9-4a4c-b595-7ac10a791eac/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/bf55d83b-ba34-4ccd-aed3-eb2300c9a3e4/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/cd4aad9c-ddb5-4f07-876a-612209c0b819/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/d2789ea1-7ffd-4c74-9a2c-a0022a17da12/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/d5127325-17c4-4ae2-8c35-f3470d7c6d96/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/d79ef07c-f873-4f44-abf8-e87853a67f30/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/dc07eff8-bd15-4d49-b4c6-63e67e236095/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/dd2f1b29-c900-4e9e-96f8-3005a287ccfb/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/dfd5051f-38d8-4431-a543-c3291abe8098/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/e142994a-3957-430d-b765-f1caddcc50d5/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/e2a32254-6473-40e9-babc-bfb730e03024/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/e7f15ca3-bbfa-4b1c-a7bd-3a7dd966dbd3/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/e82cd71f-fb94-486a-a76e-f68cb4309456/: xl.meta.bkp
datalake/.minio.sys/tmp/.trash/f58c8291-df73-4a9d-a365-0d30bc1b8db6/: xl.meta.bkp
ingestion/: get_file.py  main.py
src/exposition/: main.py  tables.py  utils.py
src/ingestion/: endpoints.json  get_file.py  main.py  write_to_storage.py
src/logger/: log_handler.py
src/transformation/dbt_paris_event_analyzer/: dbt_project.yml
src/transformation/dbt_paris_event_analyzer/macros/: generate_schema_name.sql  get_today_file.sql
src/transformation/dbt_paris_event_analyzer/models/bronze/: raw_events.sql  schema.yml
src/transformation/dbt_paris_event_analyzer/models/gold/: handicap_friendly_events.sql  nb_events_by_tags.sql  schema.yml  today_events.sql
src/transformation/dbt_paris_event_analyzer/models/silver/: agenda.sql  agenda_enriched.sql  filtered_rows.sql  up_to_date_events.sql
src/transformation/dbt_paris_event_analyzer/profiles/: .user.yml  profiles.yml
